--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.cdnfonts.com/css/newlimran');
+@import url('https://fonts.cdnfonts.com/css/regarn');
+@import url('https://fonts.cdnfonts.com/css/karmella');
+@import url('https://fonts.cdnfonts.com/css/ventella-trial');
+
 
 * {
     margin: 0;
@@ -13,12 +18,7 @@ body {
     background-color: #e3e9f7;
 }
 
-main {
-    padding: 20px;
-    position: fixed;
-    z-index: 1;
-    padding-left: calc(82px + 20px);
-}
+
 
 #sidebar {
     display: flex;
@@ -165,3 +165,6 @@ main {
     justify-content: flex-start;
     gap: 14px;
 }
+
+
+
