--- a/src/css/sobre-mim.css
+++ b/src/css/sobre-mim.css
@@ -58,8 +58,6 @@ main {
     border: 1px solid red;
     font-size: 4.8rem;
     width: 80%;
-    position: relative;
-    z-index: 1;
     margin: 0 auto; /* Centraliza a div */
 }
 
@@ -169,6 +167,7 @@ main {
         flex-direction: column;
         align-items: center;
         border: 1px solid red;
+        justify-content: space-between;
         height: 100dvh;
         width: 100%;
     }
@@ -176,34 +175,40 @@ main {
     .sobre-linguagens{
         border: 1px solid red;
         width: 80%;
+        margin-top: 5%;
     }
     
     .sobre-linguagens i{
-        font-size: 1rem;
+        font-size: 1.5rem;
         padding: 5px 10px;
         border: 1px solid red;
     }
     
     .sobre-nome {
         border: 1px solid red;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
     }
     
     #meu_nome {
-        font-size: 0.5rem;
+        font-size: 0.7rem;
         width: 50%;
     }
     
     .sobre-habilidade {
         border: 1px solid red;
-        font-size: 1.2rem;
-        width: 80%;
+        font-size: 2rem;
+        flex-wrap: wrap;
+        flex-direction: column;
+        overflow: hidden;
+        width: 100%;
         margin: 0 auto; /* Centraliza a div */
+        letter-spacing: 0px;
+
     }
-    
+
     .sobre-habilidade h1:nth-child(1) {
-        margin-bottom: -10px;
         border: 1px solid red;
+        margin-bottom: -20px;
     }
     
     .sobre-habilidade h1:nth-child(2) {
@@ -216,22 +221,24 @@ main {
         border: 1px solid red;
         margin: 0 auto; /* Centraliza a div */
         align-items: center;
+        flex-direction: column;
     }
 
 
     .local-1 p {
-        font-size: 0.4rem;
+        font-size: 0.8rem;
         border: 1px solid red;
     }
     
     .local-2 {
-        font-size: 0.5rem;
-        width: 90%;
+        font-size: 1rem;
+        width: 100%;
+        justify-content: center;
     }
     
     .local-2 h6 {
         border: 1px solid red;
-        padding: 0px 2px;
+        padding: 0px 3px;
     }
     
     .sobre-buttons{
@@ -243,9 +250,9 @@ main {
     .sobre-button-1,
     .sobre-button-2,
     .sobre-button-3{
-        padding: 5px 10px;
+        padding: 10px 15px;
         margin: 0 5px;
-        font-size: 0.5rem;
+        font-size: 0.6rem;
         box-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
         border-radius: 5px;
     }
@@ -254,20 +261,21 @@ main {
     .sobre-sociais {
         border: 1px solid red;
         width: 80%;
-        margin-top: 15px;
+        margin-bottom: 5%;
         flex-direction: column;
         align-items: center;
         display: flex;
     }
     
     .sobre-sociais a {
-        font-size: 0.5rem;
+        font-size: 0.7rem;
         text-align: center;
         width: 100%;
+        margin-bottom: 10px ;
     }
     
     .sobre-sociais .icones a {
-        font-size: 0.7rem;
+        font-size: 2rem;
         padding: 2px 4px;
         border: 1px solid red;
     }
